[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/kenpixel_square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Styles/button_hover.stylebox" type="StyleBox" id=3]
[ext_resource path="res://UI/Styles/button_normal.stylebox" type="StyleBox" id=4]
[ext_resource path="res://UI/Styles/button_pressed.stylebox" type="StyleBox" id=5]
[ext_resource path="res://UI/Sprites/check_box_unchecked.png" type="Texture" id=6]
[ext_resource path="res://UI/Sprites/check_box_checked.png" type="Texture" id=7]
[ext_resource path="res://UI/Styles/default_panel.stylebox" type="StyleBox" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}
fullscreen_toggle_path = NodePath("Panel/Fullscreen")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -280.0
margin_top = 160.0
margin_right = 280.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.678431, 0.192157, 1 )
text = "The Scary Outlet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -113.5
margin_right = 102.0
margin_bottom = 113.5
size_flags_horizontal = 3
custom_constants/separation = 26
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Panel/Buttons"]
margin_top = 27.0
margin_right = 204.0
margin_bottom = 67.0
rect_min_size = Vector2( 160, 40 )
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.858824, 0.678431, 0.192157, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.584314, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.403922, 0.101961, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Credits" type="Button" parent="Panel/Buttons"]
margin_top = 93.0
margin_right = 204.0
margin_bottom = 133.0
rect_min_size = Vector2( 160, 40 )
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.858824, 0.678431, 0.192157, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.584314, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.403922, 0.101961, 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit" type="Button" parent="Panel/Buttons"]
margin_top = 159.0
margin_right = 204.0
margin_bottom = 199.0
rect_min_size = Vector2( 160, 40 )
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.858824, 0.678431, 0.192157, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.584314, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.403922, 0.101961, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Fullscreen" type="CheckBox" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -32.0
focus_mode = 0
custom_icons/checked = ExtResource( 7 )
custom_icons/unchecked = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.858824, 0.678431, 0.192157, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.584314, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.858824, 0.678431, 0.192157, 1 )
pressed = true
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Panel/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Panel/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="toggled" from="Panel/Fullscreen" to="." method="_on_Fullscreen_toggled"]
